--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -4,12 +4,12 @@
 
 .Show > button {
 	margin: 20px;
-	border: 1px solid #2c303a;
+	border: 1px solid #fff;
 	background: #2c303a;
 	border-radius: 12px;
 	color: #fff;
-	width: 100px;
-	height: 50px;
+	width: 80px;
+	height: 40px;
 	cursor: pointer;
 	font-size: 18px;
 }
